		Activities: added notifications when students are bumped up into an activity on self unenrolment
		Activities: added logging of student activity changes in order to track sign up history
        Activities: added Activity Choices by Roll Group for ease of looking up student's activity times
		Activities: added Media bar to Description field in add and edit screens
		Attendance: added option for redirect to message wall after self registration has been taken
		Attendance: added year group selectors to reports for not present and not onsite
		Attendance: added ability for students to view their own attendance data for the current year
		Attendance: added ability to delete attendance with Manage Attendance Logs permission in Attendance by Person
		Finance: added logging for failed bulk email sends
        Finance: add a Mark as Paid bulk action in Manage Invoices
        Finance: add Credit Card payment type to gibbonPayment table
		Form Group: added link to print listing of students in form group detail view
		Library: simplified interface for Duplicate in Manage Catalog
		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
		Messenger: added the ability to resend in By Roll Group view in View Send Report
		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
		Planner: fixed module name substitution in links in Lesson Planner
		Planner: added Smart Blocks tab to Unit Overview in Lesson Planner
		Staff: fixed bug in paramater passing in Add in Manage Staff
		Students: added sibling and family information to Letters Home by Roll Group
		Students: added Comment field to medical form, linked to student application form.
		Students: added View option to Students by Form Group report, allowing Basic or Extended view
		Students: changed School Attendance sub page to Attendance to improve UI consistency