@@ -46,6 +46,7 @@ v16.0.00
 		Activities: added logging of student activity changes in order to track sign up history
         Activities: added Activity Choices by Roll Group for ease of looking up student's activity times
 		Activities: added Media bar to Description field in add and edit screens
+		Activities: fixed bug causing non-students enroled in activities to go missing from Manage Enrolment view
 		Attendance: added option for redirect to message wall after self registration has been taken
 		Attendance: added year group selectors to reports for not present and not onsite
 		Attendance: added ability for students to view their own attendance data for the current year
@@ -72,7 +73,7 @@ v16.0.00
 		System Admin: fixed spelling error in Department settings
 		System Admin: fixed typo in Third Party Settings
 		Timetable: added This Week link to timetable date navigation in Timetable by Person
-		Timetable: added highlight to the current day column header text in Timetable by Person 
+		Timetable: added highlight to the current day column header text in Timetable by Person
 		User Admin: fixed Child's Name list in Edit Family to include all students
 		User Admin: fixed bug preventing some family links from showing up in Manage Users
 		User Admin: removed Back link from child and adult delete modals in Manage Families
